--- a/gira_loading/index.html
+++ b/gira_loading/index.html
@@ -209,7 +209,7 @@
 <div class="container">
      <div class="right">
 
-         <img src="gira1.png" alt="gira logo">
+         <img src="giralogo.png" alt="gira logo">
         <div class="title">گیرا مارکتینگ</div>
         <div class="title">Gira Marketing</div>
 
