--- a/gira_loading/index.html
+++ b/gira_loading/index.html
@@ -5,7 +5,7 @@
       <title>گیرا - Gira </title>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js"></script>
       <link rel="stylesheet" href=loading.css  >
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
