--- a/gira/chatgbt.html
+++ b/gira/chatgbt.html
@@ -194,7 +194,7 @@
         <div class="portfolio-items">
             <div class="portfolio-item">
                 <img src="https://images.unsplash.com/photo-1556742400-b5c6c25957e6?auto=format&fit=crop&w=800&q=80" alt="نمونه کار 1" />
-                <div>
+                <div>g
                     <h4>کمپین تبلیغاتی فروشگاه X</h4>
                     <p>افزایش ۵۰٪ فروش آنلاین در ۳ ماه</p>
                 </div>
