--- a/gira/mainpage/gira marketing.html
+++ b/gira/mainpage/gira marketing.html
@@ -9,7 +9,7 @@
     <header>
         <img src="R.svg" alt="img">
         <nav>
-            <a href="#" > خدمات ما </a>
+            <a href="#" > خدمات ما tghrthgr </a>
         </nav>
     </header>
 
